# aomori

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  aomori.h
src/: CMakeLists.txt  aomori.c  aomori.h  main.c
src/test/: CMakeLists.txt  home.c
